# divido

./: .gitignore  Cargo.toml
aspire/: aspire.config.json  package-lock.json  package.json
crates/api/: Cargo.toml
crates/api/src/: main.rs
dospire/: apphost.cs  apphost.run.json
