[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
tokio = { version = "1.52.3", features = ["full"]}
serde_json = "1.0.150"
kameo = { version = "0.21.0", features = ["remote"] }
opentelemetry_sdk = {version = "0.32.1", features = ["logs","rt-tokio"]}
opentelemetry-appender-tracing = "0.32.0"
opentelemetry-otlp = { version = "0.32.0", features = ["grpc-tonic"] }
tracing = { version = "0.1.44", features = ["std"]}
tracing-subscriber = {version = "0.3.23", features = ["env-filter","registry","std", "fmt"]}
